@@ -5,17 +5,21 @@ import app.dao.OrderRepository;
 import app.dao.SmartphoneRepository;
 import app.dao.UserRepository;
 import app.exception.OrderNotFoundException;
+import app.exception.UserNotFoundException;
 import app.models.Order;
 import app.models.Smartphone;
 import app.models.User;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.*;
+import org.mockito.ArgumentCaptor;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -25,150 +29,377 @@ import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-class OrderServiceTest {
+public class OrderServiceTest {
 
     @Mock
     private OrderRepository orderRepository;
+
     @Mock
     private SmartphoneRepository smartphoneRepository;
-
-    @Spy
-    private LruCache<Long, Order> orderCache = new LruCache<>(100);
-    @Spy
-    private LruCache<Long, User> userCache = new LruCache<>(100);
 
     @Mock
     private UserRepository userRepository;
 
+    @Mock
+    private LruCache<Long, Order> orderCache;
+
+    @Mock
+    private LruCache<Long, User> userCache;
+
     @InjectMocks
     private OrderService orderService;
 
-    private Order testOrder;
     private User testUser;
-    private Smartphone testPhone;
+    private Order testOrder;
+    private List<Smartphone> testPhones;
+    private List<Long> testPhoneIds;
 
     @BeforeEach
     void setUp() {
         testUser = new User();
         testUser.setId(1L);
         testUser.setUsername("testUser");
+        testUser.setPassword("password");
 
-        testPhone = new Smartphone("Apple", "iPhone 15", 999.99);
-        testPhone.setId(1L);
+        testPhones = new ArrayList<>();
+        Smartphone phone1 = new Smartphone("Apple", "iPhone 13", 999.99);
+        phone1.setId(1L);
+        Smartphone phone2 = new Smartphone("Samsung", "Galaxy S21", 899.99);
+        phone2.setId(2L);
+        testPhones.add(phone1);
+        testPhones.add(phone2);
+
+        testPhoneIds = Arrays.asList(1L, 2L);
 
         testOrder = new Order();
         testOrder.setId(1L);
         testOrder.setUser(testUser);
-        testOrder.setSmartphones(List.of(testPhone));
-        testOrder.setTotalAmount(999.99);
+        testOrder.setSmartphones(testPhones);
         testOrder.setOrderDate(LocalDate.now());
-
-        // Сброс всех моков перед каждым тестом
-        Mockito.reset(orderRepository, smartphoneRepository, orderCache, userCache, userRepository);
+        testOrder.setTotalAmount(1899.98);
     }
 
     @Test
-    void getOrderById_CacheHit() {
+    void getAllOrders_shouldReturnAllOrders() {
+        // Given
+        List<Order> orders = Arrays.asList(testOrder);
+        when(orderRepository.findAll()).thenReturn(orders);
+
+        // When
+        List<Order> result = orderService.getAllOrders();
+
+        // Then
+        assertEquals(orders, result);
+        verify(orderRepository).count();
+        verify(orderRepository).findAll();
+    }
+
+    @Test
+    void getOrderById_withCachedOrder_shouldReturnOrderFromCache() {
+        // Given
         when(orderCache.get(1L)).thenReturn(testOrder);
 
+        // When
         Optional<Order> result = orderService.getOrderById(1L);
 
+        // Then
         assertTrue(result.isPresent());
         assertEquals(testOrder, result.get());
-        verify(orderRepository, never()).findById(any());
+        verify(orderCache).get(1L);
+        verifyNoInteractions(orderRepository);
     }
 
     @Test
-    void getOrderById_CacheMiss() {
+    void getOrderById_withNonCachedOrder_shouldFetchFromRepositoryAndUpdateCache() {
+        // Given
         when(orderCache.get(1L)).thenReturn(null);
         when(orderRepository.findById(1L)).thenReturn(Optional.of(testOrder));
 
+        // When
         Optional<Order> result = orderService.getOrderById(1L);
 
+        // Then
         assertTrue(result.isPresent());
-        verify(orderCache).put(eq(1L), eq(testOrder));
+        assertEquals(testOrder, result.get());
+        verify(orderCache).get(1L);
+        verify(orderRepository).findById(1L);
+        verify(orderCache).put(1L, testOrder);
     }
 
     @Test
-    @Transactional
-    void createOrder_ValidData() {
-        Order newOrder = new Order();
-        newOrder.setUser(testUser);
+    void getOrderById_withNonExistentOrder_shouldReturnEmpty() {
+        // Given
+        when(orderCache.get(999L)).thenReturn(null);
+        when(orderRepository.findById(999L)).thenReturn(Optional.empty());
+
+        // When
+        Optional<Order> result = orderService.getOrderById(999L);
+
+        // Then
+        assertFalse(result.isPresent());
+        verify(orderCache).get(999L);
+        verify(orderRepository).findById(999L);
+        verifyNoMoreInteractions(orderCache);
+    }
+
+    @Test
+    void createOrder_withValidInput_shouldCreateAndCacheOrder() {
+        // Given
+        Order orderToCreate = new Order();
+        orderToCreate.setUser(testUser);
 
         when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
-        when(smartphoneRepository.findById(1L)).thenReturn(Optional.of(testPhone));
-        when(orderRepository.save(any(Order.class))).thenAnswer(invocation -> {
-            Order saved = invocation.getArgument(0);
-            saved.setId(1L);
-            return saved;
-        });
+        when(smartphoneRepository.findById(1L)).thenReturn(Optional.of(testPhones.get(0)));
+        when(smartphoneRepository.findById(2L)).thenReturn(Optional.of(testPhones.get(1)));
+        when(orderRepository.save(any(Order.class))).thenReturn(testOrder);
 
-        Order savedOrder = orderService.createOrder(newOrder, List.of(1L));
+        // When
+        Order result = orderService.createOrder(orderToCreate, testPhoneIds);
 
-        // Проверка сохранения в кэше
-        verify(orderCache).put(eq(1L), any(Order.class));
-        assertEquals(999.99, savedOrder.getTotalAmount());
+        // Then
+        assertEquals(testOrder, result);
+
+        ArgumentCaptor<Order> orderCaptor = ArgumentCaptor.forClass(Order.class);
+        verify(orderRepository).save(orderCaptor.capture());
+        Order capturedOrder = orderCaptor.getValue();
+
+        assertEquals(testUser, capturedOrder.getUser());
+        assertEquals(2, capturedOrder.getSmartphones().size());
+        assertEquals(1899.98, capturedOrder.getTotalAmount(), 0.01);
+
+        verify(orderCache).put(1L, testOrder);
+        verify(userCache).get(1L);
     }
 
     @Test
-    @Transactional
-    void updateOrder_RemoveSmartphones() {
+    void createOrder_withNullUser_shouldThrowException() {
+        // Given
+        Order orderToCreate = new Order();
+        // user is null
+
+        // When & Then
+        IllegalArgumentException exception = assertThrows(
+                IllegalArgumentException.class,
+                () -> orderService.createOrder(orderToCreate, testPhoneIds)
+        );
+
+        assertEquals("Order must be associated with a user (userId must be provided).", exception.getMessage());
+        verifyNoInteractions(orderRepository);
+    }
+
+    @Test
+    void createOrder_withNonExistentUser_shouldThrowException() {
+        // Given
+        Order orderToCreate = new Order();
+        orderToCreate.setUser(testUser);
+
+        when(userRepository.findById(1L)).thenReturn(Optional.empty());
+
+        // When & Then
+        IllegalArgumentException exception = assertThrows(
+                IllegalArgumentException.class,
+                () -> orderService.createOrder(orderToCreate, testPhoneIds)
+        );
+
+        assertEquals("User with ID 1 not found", exception.getMessage());
+        verifyNoInteractions(orderRepository);
+    }
+
+    @Test
+    void createOrder_withEmptyPhoneIds_shouldThrowException() {
+        // Given
+        Order orderToCreate = new Order();
+        orderToCreate.setUser(testUser);
+
+        when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
+
+        // When & Then
+        IllegalArgumentException exception = assertThrows(
+                IllegalArgumentException.class,
+                () -> orderService.createOrder(orderToCreate, Collections.emptyList())
+        );
+
+        assertEquals("Order must contain at least one smartphone.", exception.getMessage());
+        verifyNoInteractions(orderRepository);
+    }
+
+    @Test
+    void createOrder_withNonExistentPhone_shouldThrowException() {
+        // Given
+        Order orderToCreate = new Order();
+        orderToCreate.setUser(testUser);
+
+        when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
+        when(smartphoneRepository.findById(1L)).thenReturn(Optional.of(testPhones.get(0)));
+        when(smartphoneRepository.findById(2L)).thenReturn(Optional.empty());
+
+        // When & Then
+        IllegalArgumentException exception = assertThrows(
+                IllegalArgumentException.class,
+                () -> orderService.createOrder(orderToCreate, testPhoneIds)
+        );
+
+        assertEquals("Smartphone with id 2 not found.", exception.getMessage());
+        verifyNoInteractions(orderRepository);
+    }
+
+    @Test
+    void updateOrder_withValidInput_shouldUpdateAndCacheOrder() {
+        // Given
+        Order updatedOrder = new Order();
+        updatedOrder.setUser(testUser);
+        LocalDate newDate = LocalDate.now().plusDays(1);
+        updatedOrder.setOrderDate(newDate);
+
         when(orderRepository.findById(1L)).thenReturn(Optional.of(testOrder));
         when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
+        when(smartphoneRepository.findById(1L)).thenReturn(Optional.of(testPhones.get(0)));
+        when(smartphoneRepository.findById(2L)).thenReturn(Optional.of(testPhones.get(1)));
+        when(orderRepository.save(any(Order.class))).thenReturn(testOrder);
 
-        Order result = orderService.updateOrder(1L, testOrder, Collections.emptyList());
+        // When
+        Order result = orderService.updateOrder(1L, updatedOrder, testPhoneIds);
 
-        assertNull(result);
-        verify(orderCache).remove(eq(1L));
+        // Then
+        assertEquals(testOrder, result);
+
+        ArgumentCaptor<Order> orderCaptor = ArgumentCaptor.forClass(Order.class);
+        verify(orderRepository).save(orderCaptor.capture());
+        Order capturedOrder = orderCaptor.getValue();
+
+        assertEquals(newDate, capturedOrder.getOrderDate());
+        assertEquals(testUser, capturedOrder.getUser());
+        assertEquals(2, capturedOrder.getSmartphones().size());
+
+        verify(orderCache).put(1L, testOrder);
+        verify(userCache).get(1L);
     }
 
     @Test
-    @Transactional
-    void updateOrder_PriceRecalculation() {
-        Smartphone newPhone = new Smartphone("Samsung", "S24", 899.99);
-        newPhone.setId(2L);
+    void updateOrder_withNonExistentOrder_shouldThrowException() {
+        // Given
+        Order updatedOrder = new Order();
+        updatedOrder.setUser(testUser);
+
+        when(orderRepository.findById(999L)).thenThrow(
+                new OrderNotFoundException("Order with id 999 not found.")
+        );
+
+        // When & Then
+        assertThrows(
+                OrderNotFoundException.class,
+                () -> orderService.updateOrder(999L, updatedOrder, testPhoneIds)
+        );
+    }
+
+    @Test
+    void updateOrder_withEmptyPhoneList_shouldDeleteOrder() {
+        // Given
         Order updatedOrder = new Order();
         updatedOrder.setUser(testUser);
 
         when(orderRepository.findById(1L)).thenReturn(Optional.of(testOrder));
         when(userRepository.findById(1L)).thenReturn(Optional.of(testUser));
-        when(smartphoneRepository.findById(2L)).thenReturn(Optional.of(newPhone));
-        when(orderRepository.save(any())).thenReturn(testOrder);
 
-        orderService.updateOrder(1L, updatedOrder, List.of(2L));
+        // When
+        Order result = orderService.updateOrder(1L, updatedOrder, Collections.emptyList());
 
-        // Проверка обновления кэша
-        verify(orderCache).put(eq(1L), any(Order.class));
+        // Then
+        assertNull(result);
+        verify(orderRepository).delete(testOrder);
+        verify(orderCache).remove(1L);
+        verify(userCache).get(1L);
     }
 
     @Test
-    void getOrdersByUserUsernameJpql() {
-        when(orderRepository.findByUserUsernameJpql("testUser")).thenReturn(List.of(testOrder));
-
-        List<Order> result = orderService.getOrdersByUserUsernameJpql("testUser");
-
-        verify(orderCache).put(eq(1L), any(Order.class));
-    }
-
-    @Test
-    void getOrdersBySmartphoneCriteria_NativeQuery() {
-        when(orderRepository.findOrdersBySmartphoneCriteriaNative(any(), any(), any(), any()))
-                .thenReturn(List.of(testOrder));
-
-        List<Order> result = orderService.getOrdersBySmartphoneCriteria("Apple", "iPhone", 900.0, 1000.0, true);
-
-        // Проверка сохранения в кэше
-        verify(orderCache).put(eq(1L), any(Order.class));
-    }
-
-    @Test
-    void deleteOrder_WithCacheUpdate() {
+    void deleteOrder_withExistingOrder_shouldDeleteAndUpdateCache() {
+        // Given
         when(orderRepository.findById(1L)).thenReturn(Optional.of(testOrder));
 
+        // When
         orderService.deleteOrder(1L);
 
-        // Проверка удаления из кэша
-        verify(orderCache).remove(eq(1L));
+        // Then
         verify(orderRepository).delete(testOrder);
+        verify(orderCache).remove(1L);
+        verify(userCache).get(1L);
+    }
+
+    @Test
+    void deleteOrder_withNonExistentOrder_shouldThrowException() {
+        // Given
+        when(orderRepository.findById(999L)).thenReturn(Optional.empty());
+
+        // When & Then
+        assertThrows(
+                OrderNotFoundException.class,
+                () -> orderService.deleteOrder(999L)
+        );
+    }
+
+    @Test
+    void getOrdersByUserUsernameJpql_shouldReturnOrdersAndUpdateCache() {
+        // Given
+        List<Order> orders = Arrays.asList(testOrder);
+        when(orderRepository.findByUserUsernameJpql("testUser")).thenReturn(orders);
+
+        // When
+        List<Order> result = orderService.getOrdersByUserUsernameJpql("testUser");
+
+        // Then
+        assertEquals(orders, result);
+        verify(orderCache).put(1L, testOrder);
+    }
+
+    @Test
+    void getOrdersByUserUsernameNative_shouldReturnOrdersAndUpdateCache() {
+        // Given
+        List<Order> orders = Arrays.asList(testOrder);
+        when(orderRepository.findByUserUsernameNative("testUser")).thenReturn(orders);
+
+        // When
+        List<Order> result = orderService.getOrdersByUserUsernameNative("testUser");
+
+        // Then
+        assertEquals(orders, result);
+        verify(orderCache).put(1L, testOrder);
+    }
+
+    @Test
+    void getOrdersBySmartphoneCriteria_withJpql_shouldReturnOrders() {
+        // Given
+        List<Order> orders = Arrays.asList(testOrder);
+        when(orderRepository.findOrdersBySmartphoneCriteriaJpql(
+                "Apple", "iPhone 13", 900.0, 1000.0)).thenReturn(orders);
+
+        // When
+        List<Order> result = orderService.getOrdersBySmartphoneCriteria(
+                "Apple", "iPhone 13", 900.0, 1000.0, false);
+
+        // Then
+        assertEquals(orders, result);
+        verify(orderRepository).findOrdersBySmartphoneCriteriaJpql(
+                "Apple", "iPhone 13", 900.0, 1000.0);
+        verify(orderCache).put(1L, testOrder);
+    }
+
+    @Test
+    void getOrdersBySmartphoneCriteria_withNative_shouldReturnOrders() {
+        // Given
+        List<Order> orders = Arrays.asList(testOrder);
+        when(orderRepository.findOrdersBySmartphoneCriteriaNative(
+                "Apple", "iPhone 13", 900.0, 1000.0)).thenReturn(orders);
+
+        // When
+        List<Order> result = orderService.getOrdersBySmartphoneCriteria(
+                "Apple", "iPhone 13", 900.0, 1000.0, true);
+
+        // Then
+        assertEquals(orders, result);
+        verify(orderRepository).findOrdersBySmartphoneCriteriaNative(
+                "Apple", "iPhone 13", 900.0, 1000.0);
+        verify(orderCache).put(1L, testOrder);
     }
 }
+
+
